# compgen-reasoning

./: .gitignore  IMPLEMENTATION_LOG.md  README.md  backfill_per_transform_id_metrics.py  backfill_wandb_metrics.py  export_wandb_results.py  inference.py  main.py  pyproject.toml  training.py
callbacks/: ema_callback.py
configs/: config.yaml
configs/data/: cogitao_data.yaml  default.yaml
configs/experiment/: default.yaml
configs/inference/: default.yaml
configs/logging/: default.yaml
configs/model/: llada_model.yaml  resnet_model.yaml  transformer_model.yaml  trm_model.yaml
configs/network/decoder/: ar_decoder.yaml  mlp_decoder.yaml  trm_decoder.yaml
configs/network/encoder/: llada_encoder.yaml  resnet_encoder.yaml  transformer_encoder.yaml  trm_encoder.yaml
configs/sweeps/: exp_sweep.yaml  exp_sweep_llada.yaml  exp_sweep_resnet.yaml  exp_sweep_transformer.yaml  exp_sweep_trm.yaml  hp_sweep.yaml  sweep.yaml
configs/training/: default.yaml
configs/wandb/: default.yaml
data/: cogitao_data.py  data.py  data_helpers.py
jobs/: help.txt  launch_all.sh  run_experiment.slurm  run_llada.slurm  run_sweep.slurm  run_sweep_3090.slurm
models/: llada_model.py  model_helpers.py  resnet_model.py  transformer_model.py  trm_model.py
networks/: llada_encoder.py  mlp_decoder.py  network_modules.py  resnet_encoder.py  transformer_encoder.py  trm_decoder.py  trm_encoder.py
utility/: general_utils.py  logging_utils.py  visualization_utils.py  wandb_utils.py
utility/callbacks/: ema_callback.py  epoch_summary_callback.py
